--- a/app/globals.css
+++ b/app/globals.css
@@ -97,8 +97,7 @@
 } */
 .bg-gradient {
   /* background: linear-gradient(45deg, hsla(210, 91%, 25%, 1) 15%, hsla(321, 55%, 40%, 1) 85%); */
-
-  background: linear-gradient(135deg, hsla(237, 58%, 13%, 1) 0%, hsla(273, 36%, 35%, 1) 38%, hsla(280, 34%, 43%, 1) 70%, hsla(287, 38%, 54%, 1) 88%, hsla(295, 94%, 76%, 1) 100%);
+  background: linear-gradient(45deg, #013C4D 50%, #D5441C 50%);
 }
 
 .html-content {
@@ -216,14 +215,14 @@
 .codepen-button span {
   position: relative;
   display: block;
-  background: #6366F1;
-  /* padding: 0.5rem 1.5rem; */
-  /* font-size: 1.1rem; */
+  /* background: #6366F1; */
+  background: #013c4d;
   border-radius: 3px;
   height: 100%;
 }
 .codepen-button span:hover {
-  background: #4F46E5;
+  /* background: #4F46E5; */
+  background: #00566e;
 }
 /* Button Animation End */
 
